# nostrmarket

./: .env.dev.example  .gitignore  .prettierignore  CLAUDE.md  Makefile  README.md  __init__.py  config.json  crud.py  description.md  helpers.py  manifest.json  migrations.py  models.py  package.json  pyproject.toml  services.py  tasks.py  toc.md  views.py  views_api.py
.claude/: settings.json
.claude/agents/: archie.md  teddie.md
.claude/commands/: add-troubleshooting.md  commit.md  create-issue.md  format.md  pr.md  push.md  run.md  stop.md  test.md  vet.md
.github/workflows/: ci.yml  release.yml
docs/: DEPLOYMENT.adoc  FAQS.adoc  SOLUTION_DESIGN.adoc  TESTING.adoc  TROUBLESHOOTING.adoc
nostr/: event.py  nostr_client.py
static/components/: direct-messages.js  edit-profile-dialog.js  key-pair.js  merchant-details.js  merchant-tab.js  nostr-keys-dialog.js  order-list.js  product-list.js  shipping-zones-list.js  shipping-zones.js  stall-details.js  stall-list.js
static/components/chat-dialog/: chat-dialog.html  chat-dialog.js
static/components/customer-market/: customer-market.html  customer-market.js
static/components/customer-orders/: customer-orders.html  customer-orders.js
static/components/customer-stall/: customer-stall.html  customer-stall.js
static/components/customer-stall-list/: customer-stall-list.html  customer-stall-list.js
static/components/direct-messages/: direct-messages.html  direct-messages.js
static/components/key-pair/: key-pair.js
static/components/market-config/: market-config.html  market-config.js
static/components/merchant-details/: merchant-details.html  merchant-details.js
static/components/order-list/: order-list.html  order-list.js
static/components/product-card/: product-card.html  product-card.js
static/components/product-detail/: product-detail.html  product-detail.js
static/components/shipping-zones/: shipping-zones.html  shipping-zones.js
static/components/shopping-cart/: shopping-cart.html  shopping-cart.js
static/components/shopping-cart-checkout/: shopping-cart-checkout.html  shopping-cart-checkout.js
static/components/shopping-cart-list/: shopping-cart-list.html  shopping-cart-list.js
static/components/stall-details/: stall-details.html  stall-details.js
static/components/stall-list/: stall-list.html  stall-list.js
static/components/user-chat/: user-chat.html  user-chat.js
static/components/user-config/: user-config.html  user-config.js
static/images/: generate_logo.py
static/js/: index.js  market.js  smart-navigation.js  utils.js
static/market/: index.html
static/market/assets/: ErrorNotFound.4887ff07.js  ErrorNotFound.58616433.js  ErrorNotFound.6264a3d1.js  ErrorNotFound.c9327b8c.js  ErrorNotFound.db627eb7.js  ErrorNotFound.db68ea1d.js  ErrorNotFound.e659d628.js  ErrorNotFound.eb82b6b1.js  MainLayout.421c5479.js  MainLayout.50bab506.js  MainLayout.543449e8.js  MainLayout.74d1dd3d.js  MainLayout.8257fc44.js  MainLayout.8e5caf60.js  MainLayout.ab9bae98.js  MainLayout.d210aac9.js  MarketPage.2aa781b5.js  MarketPage.4703a966.js  MarketPage.961238c7.js  MarketPage.b14abdfe.js  MarketPage.b1eca6b5.js  MarketPage.b41f466c.js  MarketPage.bd1265a2.js  MarketPage.e81dd906.js  QResizeObserver.0b22f089.js  QResizeObserver.1ffe80c2.js  QResizeObserver.43113a5e.js  QResizeObserver.60d75b0c.js  QResizeObserver.b282d5d7.js  QResizeObserver.bcb70109.js  QResizeObserver.d00901f8.js  QResizeObserver.f3e8ee88.js  index.336cd404.js  index.5f2eed21.css  index.70852868.js  index.725caa24.js  index.923cbbf9.js  index.a72ef313.js  index.bfa1513e.js  index.de281aed.css  (+2 more)
static/market/js/: bolt11-decoder.js  nostr.bundle.js  utils.js
templates/nostrmarket/: _api_docs.html  index.html  market.html  stall.html
templates/nostrmarket/components/: direct-messages.html  edit-profile-dialog.html  key-pair.html  merchant-details.html  merchant-tab.html  nostr-keys-dialog.html  order-list.html  product-list.html  shipping-zones-list.html  shipping-zones.html  stall-details.html  stall-list.html
